Added free search with suggestion algorithm

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <title>Destinations</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root">
+            <form>
+                <input id="searchbar" type="text"/>
+                <button type="button">Submit</button>
+                <ul id="suggestions"></ul>
+            </form>
+        </div>
             <!-- 
                 Loads asynchronously the template script and executes it immediatly.
 
