added simple load component

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Destinations</title>
     </head>
     <body>
+        <div id="loader"></div>
         <div id="root">
             <form id="form">
                 <select id="selection">
