added simple error component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div id="loader"></div>
+        <div id="error"></div>
         <div id="root">
             <form id="form">
                 <select id="selection">
