Included the template inside the info page

--- a/info.html
+++ b/info.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/template.css">
+    <title>אודות האתר | מה האתר עושה</title>
 </head>
 <body>
-    
 </body>
-    <script src="scripts/template.js"></script>
+    <script async type="module" src="scripts/template.js"></script>
 </html>
