--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/template.css">
-        <title>Destinations</title>
+        <title>יעדים | מציאת מקומות תיירות בישראל</title>
     </head>
     <body>
         <div id="loader"></div>
