--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="loader"></div>
         <div id="error"></div>
         <div id="root">
+            <h1 id="ttl">מצאו מקומות תיירותיים<br>שעוד לא ראיתם בישראל</h1>
             <form id="frm">
                 <div class="inpt">
                     <label for="selection">סוג מקום:</label>
