--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <link rel="stylesheet" href="styles/index.css">
         <title>יעדים | מציאת מקומות תיירות בישראל</title>
     </head>
@@ -25,7 +25,9 @@
                 </div>
                 <button type="submit">חפש</button>
             </form>
-            <ul id="suggestions"></ul>
+            <ul id="suggestions">
+                <h1 id="no-rslt">סננו את התוצאות ולחצו חפש</h1>
+            </ul>
         </div>
             <!-- 
                 Loads asynchronously the template script and executes it immediatly.
