added fully designed info page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/index.css">
         <title>יעדים | מציאת מקומות תיירות בישראל</title>
     </head>
@@ -23,7 +23,7 @@
                 <button type="submit">חפש</button>
             </form>
             <ul id="suggestions">
-                <h1 id="no-rslt">סננו את התוצאות ולחצו חפש</h1>
+                <li id="no-rslt">סננו את התוצאות ולחצו חפש</li>
             </ul>
         </div>
             <!-- 
