--- a/info.html
+++ b/info.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/template.css">
-    <title>אודות האתר | מה האתר עושה</title>
+    <link rel="stylesheet" href="styles/info.css">
+    <title>אודות האתר | מאחורי האתר</title>
 </head>
 <body>
+    <div id="root">
+        <article>
+            <section>
+                <h1>הבעיה</h1>
+                <p>
+                    לאורך תקופת הקורונה נאסרו טיסות לחו"ל וישראלים רבים נאלצו לחפש מקומות תיירות בישראל.
+                    מתוכם אלה שמכירים מקומות תיירות פרסמו אותם במקומות שונים שהגישה אלהם אינה מסודרת.
+                    כך נודע כי יש לרכז את מקומות התיירות הישראליים במקור אחד.
+                </p>
+            </section>
+            <section>
+                <h1>הפתרון</h1>
+                <p>
+                    יעדים הוא אתר חיפוש מקומות תיירות בישראל. האתר כולל סינון לפי סוגי מקומות תיירות וגם לפי חיפוש חופשי.
+                    <br>המידע אודות מקומות התיירות שנמצאים באתר מגיע מתוך <a href="https://info.data.gov.il/datagov/home/">מאגר המידע הממשלתי</a>.
+                </p>
+            </section>
+            <section id="support">
+                <div>
+                    <h1>תמיכה</h1>
+                    <p>
+                        אם אתם מזהים תקלה כלשהיא או שאתם רוצים להציע דבר חדש לאתר תוכלו לפתוח נושא ב-
+                        <a href="https://github.com/nickBes/destinations/issues">Github</a>:
+                    </p>
+                </div>
+                <img src="./media/gh_issues.png"/>
+            </section>
+        </article>
+    </div>
 </body>
     <script async type="module" src="scripts/template.js"></script>
 </html>
