changed font sizing to be responsive and changed flexboxes a bit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="root">
-            <h1 id="ttl">מצאו מקומות תיירותיים<br>שעוד לא ראיתם בישראל</h1>
+            <h1 id="ttl">מצאו מקומות תיירותיים<br>שעוד לא הכרתם בישראל</h1>
             <form id="frm">
                 <div class="inpt">
                     <label for="selection">סוג מקום:</label>
