design seems to be quite aesthetic

--- a/info.html
+++ b/info.html
@@ -22,7 +22,7 @@
                 <h1>הפתרון</h1>
                 <p>
                     יעדים הוא אתר חיפוש מקומות תיירות בישראל. האתר כולל סינון לפי סוגי מקומות תיירות וגם לפי חיפוש חופשי.
-                    <br>המידע אודות מקומות התיירות שנמצאים באתר מגיע מתוך <a href="https://info.data.gov.il/datagov/home/">מאגר המידע הממשלתי</a>.
+                    המידע אודות מקומות התיירות שנמצאים באתר מגיע מתוך <a href="https://info.data.gov.il/datagov/home/">מאגר המידע הממשלתי</a>.
                 </p>
             </section>
             <section id="support">
@@ -30,7 +30,7 @@
                     <h1>תמיכה</h1>
                     <p>
                         אם אתם מזהים תקלה כלשהיא או שאתם רוצים להציע דבר חדש לאתר תוכלו לפתוח נושא ב-
-                        <a href="https://github.com/nickBes/destinations/issues">Github</a>:
+                        <a href="https://github.com/nickBes/destinations/issues">GitHub</a>:
                     </p>
                 </div>
                 <img src="./media/gh_issues.png"/>
